Fix MAGE_MODE for dev environment

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 # Development environment settings
 BACKEND_NAME=admin
 CRYPT_KEY=14c92108e9fecaffac743ac87cf1f7bc
-MAGE_MODE=development
+MAGE_MODE=developer
 DB_DEBUG=1
 DB_LOGGER=1
