Add TODO in to specific environments .env files

--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-# Production environment settings
+# Production environment settings TODO: need to add into .gitignore
 BACKEND_NAME=w0zAWB_admin
 CRYPT_KEY=14c92108e9fecaffac743ac87cf1f7bc
 MAGE_MODE=production
