--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-# Development environment settings
+# Development environment settings TODO: need to add into .gitignore
 BACKEND_NAME=admin
 CRYPT_KEY=14c92108e9fecaffac743ac87cf1f7bc
 MAGE_MODE=developer
