Rename specific environments .env files

--- a/.env
+++ b/.env
@@ -37,5 +37,5 @@ BLACKFIRE_CLIENT_TOKEN=
 BLACKFIRE_SERVER_ID=
 BLACKFIRE_SERVER_TOKEN=
 
-# Current environment
-APP_ENV=dev
+# Current environment (will be loaded "./.env.$APP_ENV" file)
+APP_ENV=production
