Create environment files structure

--- a/.env
+++ b/.env
@@ -36,3 +36,48 @@ BLACKFIRE_CLIENT_ID=
 BLACKFIRE_CLIENT_TOKEN=
 BLACKFIRE_SERVER_ID=
 BLACKFIRE_SERVER_TOKEN=
+
+#+-----------------------------------------------------------------------------+
+#| Environment configurations                                                  |
+#+-----------------------------------------------------------------------------+
+
+# Environment settings
+APP_ENV=dev
+
+# Database
+DB_CONNECTION=default
+DB_HOST=
+DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+DB_TABLE_PREFIX=""
+
+# Magento env
+CRYPT_KEY=
+BACKEND_NAME=
+MAGE_MODE=default
+
+# Base urls
+CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL=
+CONFIG__DEFAULT__WEB__UNSECURE__BASE_LINK_URL={{unsecure_base_url}}
+CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{base_url}}
+CONFIG__DEFAULT__WEB__SECURE__BASE_LINK_URL={{secure_base_url}}
+
+# Mail sending
+CONFIG__DEFAULT__SYSTEM__SMTP__DISABLE=1
+CONFIG__DEFAULT__SYSTEM__SMTP__HOST=localhost
+CONFIG__DEFAULT__SYSTEM__SMTP__PORT=25
+
+# FPC Cache
+CONFIG__DEFAULT__SYSTEM__FULL_PAGE_CACHE__CACHING_APPLICATION=1
+
+# JavaScript Settings
+CONFIG__DEFAULT__DEV__JS__MERGE_FILES=
+CONFIG__DEFAULT__DEV__JS__ENABLE_JS_BUNDLING=
+CONFIG__DEFAULT__DEV__JS__MINIFY_FILES=
+CONFIG__DEFAULT__DEV__JS__MOVE_SCRIPT_TO_BOTTOM=
+
+# CSS Settings
+CONFIG__DEFAULT__DEV__CSS__MERGE_CSS_FILES=
+CONFIG__DEFAULT__DEV__CSS__MINIFY_FILES=
