Remove CONFIG__DEFAULT__WEB__SECURE__BASE_URL value in main .env file

--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ MAGE_MODE=default
 # Base urls
 CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL=
 CONFIG__DEFAULT__WEB__UNSECURE__BASE_LINK_URL={{unsecure_base_url}}
-CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{base_url}}
+CONFIG__DEFAULT__WEB__SECURE__BASE_URL=
 CONFIG__DEFAULT__WEB__SECURE__BASE_LINK_URL={{secure_base_url}}
 
 # Mail sending
