Add CACHE_ID_PREFIX into .env file

--- a/.env
+++ b/.env
@@ -42,7 +42,7 @@ BLACKFIRE_SERVER_TOKEN=
 #+-----------------------------------------------------------------------------+
 
 # Environment settings
-APP_ENV=dev
+APP_ENV=
 
 # Database
 DB_CONNECTION=default
@@ -52,32 +52,22 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 DB_TABLE_PREFIX=""
+DB_ACTIVE=1
+
+DB_CONNECTION2=second_connection
+DB_HOST2=
+DB_PORT2=3306
+DB_DATABASE2=
+DB_USERNAME2=
+DB_PASSWORD2=
+DB_TABLE_PREFIX2=""
+DB_ACTIVE2=0
+
+# Cache
+CACHE_ID_PREFIX=
 
 # Magento env
 CRYPT_KEY=
 BACKEND_NAME=
 MAGE_MODE=default
 
-# Base urls
-CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL=
-CONFIG__DEFAULT__WEB__UNSECURE__BASE_LINK_URL={{unsecure_base_url}}
-CONFIG__DEFAULT__WEB__SECURE__BASE_URL=
-CONFIG__DEFAULT__WEB__SECURE__BASE_LINK_URL={{secure_base_url}}
-
-# Mail sending
-CONFIG__DEFAULT__SYSTEM__SMTP__DISABLE=1
-CONFIG__DEFAULT__SYSTEM__SMTP__HOST=localhost
-CONFIG__DEFAULT__SYSTEM__SMTP__PORT=25
-
-# FPC Cache
-CONFIG__DEFAULT__SYSTEM__FULL_PAGE_CACHE__CACHING_APPLICATION=1
-
-# JavaScript Settings
-CONFIG__DEFAULT__DEV__JS__MERGE_FILES=
-CONFIG__DEFAULT__DEV__JS__ENABLE_JS_BUNDLING=
-CONFIG__DEFAULT__DEV__JS__MINIFY_FILES=
-CONFIG__DEFAULT__DEV__JS__MOVE_SCRIPT_TO_BOTTOM=
-
-# CSS Settings
-CONFIG__DEFAULT__DEV__CSS__MERGE_CSS_FILES=
-CONFIG__DEFAULT__DEV__CSS__MINIFY_FILES=
