Fix error APP_ENV in .env file

--- a/.env
+++ b/.env
@@ -42,7 +42,7 @@ BLACKFIRE_SERVER_TOKEN=
 #+-----------------------------------------------------------------------------+
 
 # Environment settings
-APP_ENV=
+APP_ENV=dev
 
 # Database
 DB_CONNECTION=default
@@ -70,4 +70,3 @@ CACHE_ID_PREFIX=
 CRYPT_KEY=
 BACKEND_NAME=
 MAGE_MODE=default
-
