Add cache configuration into .env file

--- a/.env
+++ b/.env
@@ -64,7 +64,14 @@ DB_TABLE_PREFIX2=""
 DB_ACTIVE2=0
 
 # Cache
-CACHE_ID_PREFIX=69d_
+CACHE_DEFAULT_ID_PREFIX=69d_
+CACHE_FRONTEND_DEFAULT_HOST=redis
+CACHE_FRONTEND_DEFAULT_PORT=6379
+CACHE_FRONTEND_DEFAULT_PASSWORD=
+CACHE_PAGE_ID_PREFIX=69d_
+CACHE_FRONTEND_PAGE_HOST=redis
+CACHE_FRONTEND_PAGE_PORT=6379
+CACHE_FRONTEND_PAGE_PASSWORD=
 
 # Magento env
 CRYPT_KEY=
