--- a/.env
+++ b/.env
@@ -73,6 +73,12 @@ CACHE_FRONTEND_PAGE_HOST=redis
 CACHE_FRONTEND_PAGE_PORT=6379
 CACHE_FRONTEND_PAGE_PASSWORD=
 
+# Session
+QUEUE_AMQP_HOST=
+QUEUE_AMQP_PORT=5672
+QUEUE_AMQP_USERNAME=
+QUEUE_AMQP_PASSWORD=
+
 # Magento env
 CRYPT_KEY=
 BACKEND_NAME=
