Move CONFIG__DEFAULT__SYSTEM__SMTP__DISABLE and CONFIG__DEFAULT__SYSTEM__FULL_PAGE_CACHE__CACHING_APPLICATION configuration to .local files

--- a/.env
+++ b/.env
@@ -64,12 +64,13 @@ DB_TABLE_PREFIX2=""
 DB_ACTIVE2=0
 
 # Cache
-CACHE_DEFAULT_ID_PREFIX=69d_
-CACHE_FRONTEND_DEFAULT_HOST=redis
+CACHE_DEFAULT_ID_PREFIX=
+CACHE_FRONTEND_DEFAULT_HOST=
 CACHE_FRONTEND_DEFAULT_PORT=6379
 CACHE_FRONTEND_DEFAULT_PASSWORD=
-CACHE_PAGE_ID_PREFIX=69d_
-CACHE_FRONTEND_PAGE_HOST=redis
+
+CACHE_PAGE_ID_PREFIX=
+CACHE_FRONTEND_PAGE_HOST=
 CACHE_FRONTEND_PAGE_PORT=6379
 CACHE_FRONTEND_PAGE_PASSWORD=
 
