--- a/.env
+++ b/.env
@@ -74,7 +74,7 @@ CACHE_FRONTEND_PAGE_HOST=
 CACHE_FRONTEND_PAGE_PORT=6379
 CACHE_FRONTEND_PAGE_PASSWORD=
 
-# Session
+# Queue
 QUEUE_AMQP_HOST=
 QUEUE_AMQP_PORT=5672
 QUEUE_AMQP_USERNAME=
