Create "Session" configuration in .env file

--- a/.env
+++ b/.env
@@ -80,6 +80,11 @@ QUEUE_AMQP_PORT=5672
 QUEUE_AMQP_USERNAME=
 QUEUE_AMQP_PASSWORD=
 
+# Session
+SESSION_REDIS_HOST=
+SESSION_REDIS_PORT=6379
+SESSION_REDIS_PASSWORD=
+
 # Magento env
 CRYPT_KEY=
 BACKEND_NAME=
