Add user configuration into .env file

--- a/.env
+++ b/.env
@@ -67,11 +67,13 @@ DB_ACTIVE2=0
 CACHE_DEFAULT_ID_PREFIX=
 CACHE_FRONTEND_DEFAULT_HOST=
 CACHE_FRONTEND_DEFAULT_PORT=6379
+CACHE_FRONTEND_DEFAULT_USERNAME=
 CACHE_FRONTEND_DEFAULT_PASSWORD=
 
 CACHE_PAGE_ID_PREFIX=
 CACHE_FRONTEND_PAGE_HOST=
 CACHE_FRONTEND_PAGE_PORT=6379
+CACHE_FRONTEND_PAGE_USERNAME=
 CACHE_FRONTEND_PAGE_PASSWORD=
 
 # Queue
@@ -83,6 +85,7 @@ QUEUE_AMQP_PASSWORD=
 # Session
 SESSION_REDIS_HOST=
 SESSION_REDIS_PORT=6379
+SESSION_REDIS_USERNAME=
 SESSION_REDIS_PASSWORD=
 
 # Magento env
