Add APP_ENV to .env file

--- a/.env
+++ b/.env
@@ -41,6 +41,9 @@ BLACKFIRE_SERVER_TOKEN=
 #| Environment configurations                                                  |
 #+-----------------------------------------------------------------------------+
 
+# Environment settings
+APP_ENV=
+
 # Database
 DB_HOST=
 DB_PORT=3306
