--- a/magento/.gitignore
+++ b/magento/.gitignore
@@ -15,8 +15,8 @@ atlassian*
 /.idea
 /.gitattributes
 /app/config_sandbox
-#/app/etc/config.php
-#/app/etc/env.php
+/app/etc/config.php
+/app/etc/env.php
 /app/code/Magento/TestModule*
 /lib/internal/flex/uploader/.actionScriptProperties
 /lib/internal/flex/uploader/.flexProperties
@@ -72,5 +72,3 @@ atlassian*
 /generated/*
 !/generated/.htaccess
 .DS_Store
-
-*.local
