Delete APP_ENV from .env and add ElasticSearch configuration into .env file

--- a/magento/.env
+++ b/magento/.env
@@ -1,6 +1,3 @@
-# Environment
-APP_ENV=
-
 # Database
 DB_HOST=
 DB_PORT=3306
@@ -17,6 +14,11 @@ CACHE_PAGE_ID_PREFIX=69d_
 CRYPT_KEY=
 BACKEND_NAME=
 MAGE_MODE=default
+
+# Elastic Search
+CONFIG__DEFAULT__CATALOG__SEARCH__ENGINE=elasticsearch7
+CONFIG__DEFAULT__CATALOG__SEARCH__ELASTICSEARCH7_SERVER_HOSTNAME=
+CONFIG__DEFAULT__CATALOG__SEARCH__ELASTICSEARCH7_SERVER_PORT=9200
 
 # URLs
 CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{base_url}}
