Add base link configuration to .env file

--- a/magento/.env
+++ b/magento/.env
@@ -20,4 +20,7 @@ CONFIG__DEFAULT__CATALOG__SEARCH__ENGINE=
 CONFIG__DEFAULT__CATALOG__SEARCH__ELASTICSEARCH7_SERVER_HOSTNAME=
 
 # URLs
+CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL={{base_url}}
+CONFIG__DEFAULT__WEB__UNSECURE__BASE_LINK_URL={{unsecure_base_url}}
 CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{base_url}}
+CONFIG__DEFAULT__WEB__SECURE__BASE_LINK_URL={{secure_base_url}}
