--- a/magento/.env
+++ b/magento/.env
@@ -7,8 +7,7 @@ DB_PASSWORD=
 DB_TABLE_PREFIX=""
 
 # Cache
-CACHE_DEFAULT_ID_PREFIX=69d_
-CACHE_PAGE_ID_PREFIX=69d_
+CACHE_ID_PREFIX=69d_
 
 # Magento
 CRYPT_KEY=
@@ -16,11 +15,9 @@ BACKEND_NAME=
 MAGE_MODE=default
 
 # Elastic Search
-CONFIG__DEFAULT__CATALOG__SEARCH__ENGINE=
-CONFIG__DEFAULT__CATALOG__SEARCH__ELASTICSEARCH7_SERVER_HOSTNAME=
+ELASTIC_HOST=
+ELASTIC_PORT=
 
 # URLs
-CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL={{base_url}}
-CONFIG__DEFAULT__WEB__UNSECURE__BASE_LINK_URL={{unsecure_base_url}}
-CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{base_url}}
-CONFIG__DEFAULT__WEB__SECURE__BASE_LINK_URL={{secure_base_url}}
+CONFIG__DEFAULT__WEB__SECURE__BASE_URL={{unsecure_base_url}}
+CONFIG__DEFAULT__WEB__UNSECURE__BASE_URL=
