Add instruction doc in to .env.local.sample

--- a/magento/.env.local.sample
+++ b/magento/.env.local.sample
@@ -1,3 +1,6 @@
+# To run the necessary assembly, just run the command:
+#   `APP_ENV=dev && bin/magento setup:install` - `.env.dev` / `.env.dev.local` files will be used
+
 # Database
 DB_HOST=db
 DB_DATABASE=magento
